fixed jumped field and added correct font

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,10 @@
 }
 
 * {
+  font-family: Avenir, serif;
   box-sizing: border-box;
+
+  --default-font-size-small: 14px;
 }
 
 .search-bar {
@@ -12,16 +15,22 @@
 }
 
 .search-bar__input {
+  outline: none;
+
+  font-family: inherit;
+  font-weight: 900;
+  font-size: 16px;
+
   width: 100%;
   padding: 27px 62px 26px;
 
   border-radius: 3px;
-  border: 1px solid #E1E7ED;
+  border: 1px solid #e1e7ed;
 
   background-position: 25px center;
   background-image: url(./images/Search.svg);
   background-repeat: no-repeat;
-  background-color: #FFF;
+  background-color: #fff;
   box-shadow: 0 1px 8px 0 rgba(61, 78, 97, 0.10);
 }
 
@@ -29,36 +38,35 @@
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
-.search-bar__input:focus {
-  outline: none;
+.search-bar__input::placeholder {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
 
-  font-family: Avenir, serif;
+  color: #3d4e61;
+}
+
+.search-bar__input:focus {
+  font-family: inherit;
   font-weight: 900;
   font-size: 16px;
 
-  background-color: linear-gradient(180deg, #FFF 0%, #F6F6F7 100%);
+  background-color: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.search-bar__input::placeholder {
-  font-family: Avenir, serif;
-  font-weight: 400;
-  font-size: 16px;
-
-  color: #3D4E61;
-}
-
 .search-bar__input--small {
+  font-size: var(--default-font-size-small);
   padding: 12px 33px 13px;
   background-size: 11px;
   background-position: 12px center;
 }
 
 .search-bar__input--small::placeholder {
-  font-size: 14px;
+  font-size: var(--default-font-size-small);
 }
 
 .search-bar__input--small:focus {
-  font-size: 14px;
+  font-size: var(--default-font-size-small);
 }
